# NEXAR-DASHCAM-COLLISION-PREDUCTION

./: .env.example  .gitignore  Nexar_Project_Context.md  PROXIMOS_PASSOS_IMPLEMENTACAO.md  PROXIMO_PASSO_SEQ8_SAMPLER_IMPLEMENTACAO.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 01_nexar_end_to_end_experiment.ipynb  02_data_exploration.ipynb  03_baseline_model.ipynb  04_frame_extraction.ipynb  05_model_evaluation.ipynb  06_results_review.ipynb  07_validation_experiment_analysis.ipynb  08_best_checkpoint_mlflow_review.ipynb  09_temporal_aggregation_review.ipynb
reports/: alert_evaluation.md  article_dataset_problem_formulation.md  article_introduction.md  baseline_results.md  best_checkpoint_experiment.md  cnn_rnn_sequence_experiment.md  dataset_initial_analysis.md  experiment_comparison_val.md  gru_seq8_focal_experiment.md  gru_seq8_sampler_experiment.md  methodology.md  metodologia_resultados_proximos_passos.md  mlflow_tracking.md  next_steps_roadmap.md  paper_draft.md  product_context_hard_negative_ablation_plan.md  product_context_hard_negative_mining.md  product_context_hard_negatives_phase_classifier_seq8_experiment.md  product_context_hn_top1000_w15_phase_classifier_seq8_experiment.md  product_convnext_tiny_experiment.md  product_efficientnet_b0_experiment.md  product_efficientnet_b0_finetune_last2_experiment.md  product_event_window_gru_seq8_alert_weighted_experiment.md  product_event_window_gru_seq8_alert_weighted_layer4_experiment.md  product_event_window_gru_seq8_dense_negatives_experiment.md  product_model_roadmap.md  (+11 more)
(+149 files in other folders)
